# claude-toolshop

./: .gitignore  INSTALL.md  LICENSE  README.md
.claude-plugin/: marketplace.json
plugins/agent-dispatch/: README.md
plugins/bugdb-knowledge/: INSTALL.md  README.md  pyproject.toml
plugins/bugdb-knowledge/.claude-plugin/: plugin.json
plugins/bugdb-knowledge/bugdb/: cli.py  db.py  exceptions.py  formatters.py  models.py  search.py
plugins/bugdb-knowledge/bugdb/tests/: conftest.py  test_cli.py  test_db.py  test_e2e.py  test_explore.py  test_hook.py  test_models.py  test_paths.py  test_search.py
plugins/bugdb-knowledge/commands/: bugdb-setup.md  bugfix.md  bugsearch.md
plugins/bugdb-knowledge/docs/: MANUAL_INSTALL.md
plugins/bugdb-knowledge/evals/: .gitignore  trigger_eval_lookup.json  trigger_eval_lookup.list.json  trigger_eval_record.json  trigger_eval_record.list.json
plugins/bugdb-knowledge/hooks/: hooks.json
plugins/bugdb-knowledge/hooks/js/bugdb_check/: bugdb_check.js  bugdb_python_check.js
plugins/bugdb-knowledge/scripts/: .gitignore
plugins/bugdb-knowledge/scripts/bugdb/: cli.py  config.py  formatters.py  log.py  normalizer.py  paths.py
plugins/bugdb-knowledge/scripts/bugdb/tests/: test_cli.py  test_config.py  test_db.py  test_e2e.py  test_feedback.py  test_formatters.py  test_normalizer.py  test_paths.py  test_search.py
plugins/bugdb-knowledge/skills/bugdb-lookup/: SKILL.md
plugins/bugdb-knowledge/skills/bugdb-record/: SKILL.md
plugins/codemap-boost/: .gitattributes  README.md
plugins/codemap-pro/: IMPLEMENTATION_PLAN.md  README.md
(+117 files in other folders)
